--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +43,8 @@ dependencies:
   firebase_core: ^3.11.0
   firebase_storage: ^12.4.2
   cloud_firestore: ^5.6.3
+  flutter_bloc: ^9.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
