--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,6 +8,11 @@
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    avoid_relative_lib_imports: error
+    always_use_package_imports: error
+
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -21,6 +26,7 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    - always_use_package_imports
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
