--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.6.3
   flutter_bloc: ^9.0.0
   intl: ^0.19.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
