--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_bloc: ^9.0.0
   intl: ^0.19.0
   carousel_slider: ^5.0.0
+  webview_flutter_web: ^0.2.3+4
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
