--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,17 +37,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  telegram_web_app: ^0.2.0
   google_fonts: ^6.2.1
   go_router: ^14.7.2
   firebase_core: ^3.11.0
   firebase_storage: ^12.4.2
   cloud_firestore: ^5.6.3
   flutter_bloc: ^9.0.0
-  intl: ^0.19.0
   carousel_slider: ^5.0.0
   webview_flutter_web: ^0.2.3+4
   url_launcher: ^6.3.1
+  telegram_web_app: ^0.3.3
+#  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -92,12 +92,12 @@ flutter:
       #     fonts:
       #       - asset: fonts/Schyler-Regular.ttf
       #       - asset: fonts/Schyler-Italic.ttf
-      #         style: italic
-      #   - family: Trajan Pro
-      #     fonts:
-      #       - asset: fonts/TrajanPro.ttf
-      #       - asset: fonts/TrajanPro_Bold.ttf
-      #         weight: 700
-      #
+    #         style: italic
+    #   - family: Trajan Pro
+    #     fonts:
+    #       - asset: fonts/TrajanPro.ttf
+    #       - asset: fonts/TrajanPro_Bold.ttf
+    #         weight: 700
+    #
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/custom-fonts/#from-packages
