--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ migrate_working_dir/
 .idea/
 
 # project related
-/lib/firebase_options.dart
+#/lib/firebase_options.dart
 /android/app/google-services.json
 
 # The .vscode folder contains launch configuration and tasks you configure in
