--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   webview_flutter_web: ^0.2.3+4
   url_launcher: ^6.3.1
   telegram_web_app: ^0.3.3
+  #  intl: ^0.19.0
 #  intl: ^0.20.2
 
 dev_dependencies:
@@ -90,8 +91,8 @@ flutter:
       # fonts:
       #   - family: Schyler
       #     fonts:
-      #       - asset: fonts/Schyler-Regular.ttf
-      #       - asset: fonts/Schyler-Italic.ttf
+    #       - asset: fonts/Schyler-Regular.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
     #         style: italic
     #   - family: Trajan Pro
     #     fonts:
