--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.1
   telegram_web_app: ^0.3.3
   intl: ^0.19.0
+  mask_text_input_formatter: ^2.9.0
 #  intl: ^0.20.2
 
 dev_dependencies:
