--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/logo-dark.png
       #   - images/a_dot_ham.jpeg
 
       # An image asset can refer to one or more resolution-specific "variants", see
@@ -90,7 +91,7 @@ flutter:
       # list giving the asset and other descriptors for the font. For
       # example:
       # fonts:
-      #   - family: Schyler
+    #   - family: Schyler
     #     fonts:
     #       - asset: fonts/Schyler-Regular.ttf
     #       - asset: fonts/Schyler-Italic.ttf
