--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   telegram_web_app: ^0.3.3
   intl: ^0.19.0
   mask_text_input_formatter: ^2.9.0
+  translit: ^2.0.2
 #  intl: ^0.20.2
 
 dev_dependencies:
