--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.19.0
   mask_text_input_formatter: ^2.9.0
   translit: ^2.0.2
+  flutter_markdown: ^0.7.7+1
 #  intl: ^0.20.2
 
 dev_dependencies:
